[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flightgrab"
version = "0.2.0"
description = "Python client for FlightGrab flight deals (search, export, optional Pro booking links)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Tevin Parboosingh", email = "tparboosingh84@gmail.com" },
]
keywords = ["flights", "travel", "flightgrab", "price-comparison"]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "fast-flights>=0.1.0",
]
pandas = ["pandas>=1.5.0"]
local = ["fast-flights>=0.1.0"]

[project.urls]
Homepage = "https://github.com/tevindonte/flightgrab-python"
Documentation = "https://flightgrab.cc"

[project.scripts]
flightgrab = "flightgrab.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flightgrab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
